--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,5 +1,9 @@
 .postcard-container {
   @apply w-full max-w-[560px] h-[317px] bg-white rounded-[4px] shadow-primary overflow-hidden flex;
+  transition: 0.1s ease;
+  &:hover {
+    @apply scale-[1.01];
+  }
 }
 
 .actions-container {
@@ -36,11 +40,19 @@
 }
 
 .tags-card {
-  @apply max-w-[240px] bg-white rounded-[4px] p-4;
+  @apply max-w-[240px] bg-white rounded-[4px] p-4 border-[1px] border-neutral200;
   > .tag-item {
     @apply p-2 cursor-pointer text-xs;
     &:hover {
       @apply bg-primary50;
     }
+  }
+}
+
+.option-list {
+  @apply flex flex-wrap;
+  > .list-item {
+    @apply w-[120px] text-xs my-1 text-neutral500;
+    text-decoration: none;
   }
 }
