--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -2,7 +2,7 @@
   @apply w-full max-w-[560px] h-[317px] bg-white rounded-[4px] shadow-primary overflow-hidden flex;
   transition: 0.1s ease;
   &:hover {
-    @apply scale-[1.01];
+    transform: scale(1.01);
   }
 }
 
@@ -12,7 +12,7 @@
   .icon {
     transition: 0.2s ease;
     &:hover {
-      @apply text-neutral700 text-[110%];
+      @apply text-[110%] text-neutral700;
     }
   }
 }
