--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
+@import "./styles/button.scss";
+@import "./components/assets/assets.scss";
+@import "./components/components.scss";
+@import "./pages/styles.scss";
+
 * {
   margin: 0;
   padding: 0;
