--- a/src/components/assets/assets.scss
+++ b/src/components/assets/assets.scss
@@ -66,7 +66,7 @@
 .tags-button {
   @apply w-fit rounded-[4px] border-[1px]  px-2 py-[10.5px] flex items-center border-neutral300 text-neutral300;
   &:hover {
-    @apply scale-[1.01];
+    transform: scale(1.01);
   }
   &.active {
     @apply border-primary500 text-primary500;
