--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,6 +1,6 @@
 .button {
   transition: 0.2s ease;
-  @apply no-underline text-[16px] font-semibold px-6 py-3 rounded-[4px] w-full;
+  @apply no-underline text-[16px] font-semibold px-6 py-3 rounded-[4px] w-full outline-none;
 
   &.primary-button {
     @apply bg-primary500 text-white hover:bg-primary800;
