--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,5 +1,5 @@
 .postcard-container {
-  @apply w-[560px] h-[317px] bg-white rounded-[4px] shadow-primary overflow-hidden flex;
+  @apply w-[560px] h-[317px] bg-white rounded-[4px] shadow-primary flex overflow-hidden;
   transition: 0.1s ease;
   &:hover {
     transform: scale(1.01);
