--- a/src/App.scss
+++ b/src/App.scss
@@ -54,3 +54,17 @@ a {
   background-color: #f1f1f1;
   border-radius: 10px;
 }
+
+.pulse {
+  animation: pulse 1.4s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+
+  @keyframes pulse {
+    0%,
+    100% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+  }
+}
